# sequential-huffman-coder

./: .gitignore  CMakeLists.txt  build_block_tree.cpp  build_block_tree.h  build_codebook.cpp  build_histogram.cpp  build_histogram.h  chunked_file_reader.cpp  chunked_file_reader.h  data_block.h  decode_block.cpp  decode_block.h  encode_block.h  huffman_node.h  main.cpp  run_decoder.cpp  run_decoder.h  run_encoder.cpp
sequential/: build_block_tree.cpp  build_block_tree.h  build_codebook.h  chunked_file_reader.h  encode_block.cpp  run_decoder.cpp  run_decoder.h  run_encoder.cpp  run_encoder.h  write_block_to_file.cpp  write_block_to_file.h
sequential/tools/: compare.cpp
